# dropset-v1

./: .gitignore  Cargo.toml  README.md  package.json  rustfmt.toml
bots/crates/market-maker/: Cargo.toml
bots/crates/market-maker/examples/: initialization_helper.rs  initialize_market.rs
bots/crates/market-maker/src/: calculate_spreads.rs  cli.rs  main.rs  maker_context.rs  program_subscribe.rs
bots/crates/market-maker/src/maker_context/: mod.rs  order_as_key.rs  order_flow.rs  utils.rs
bots/crates/market-maker/src/oanda/: price_feed.rs  types.rs
client/: Cargo.toml
client/examples/: batch_replace.rs  close_seat.rs  deposit_and_withdraw.rs  many_instructions.rs  market_order.rs  place_and_cancel.rs  place_ask.rs  place_asks.rs  post_and_cancel.rs  post_asks.rs  register_market.rs  two_seats.rs
client/src/: lib.rs  logs.rs  pda.rs  single_signer_instruction.rs  test_accounts.rs  token_instructions.rs  transaction_parser.rs  transactions.rs  views.rs
client/src/context/: market.rs  mod.rs  token.rs
client/src/e2e_helpers/: mod.rs  mollusk.rs  test_accounts.rs
client/src/events/: dropset_event.rs  mod.rs
client/src/mollusk_helpers/: checks.rs  helper_trait.rs  market_fixture.rs  mod.rs  token_fixture.rs  utils.rs
client/src/pretty/: instruction.rs  instruction_error.rs  mod.rs  transaction.rs
client/src/transaction_parser/: mod.rs  parse.rs  parse_logs.rs  parsed_account.rs  parsed_instruction.rs  parsed_logs.rs  parsed_transaction.rs
client/tests/: close_seat.rs  deposit_and_withdraw.rs  instruction_data_len_cost.rs  post_and_cancel.rs  post_asks.rs  post_only.rs  register_market.rs  simple_transfer.rs  sorted_seats.rs
cu-bench-phoenix-v1/: Cargo.toml  README.md  run-bench.sh
cu-bench-phoenix-v1/src/: utils.rs
cu-bench-phoenix-v1/tests/: cu_measurement.rs
cu-bench/programs/pack-orders/: Cargo.toml
cu-bench/programs/pack-orders/src/: lib.rs
cu-bench/tests/: Cargo.toml
cu-bench/tests/src/: lib.rs
cu-bench/tests/tests/: pack_borsh_equivalence.rs  pack_orders.rs
instruction-macros/: Cargo.toml  README.md
instruction-macros/crates/instruction-macros/: Cargo.toml
instruction-macros/crates/instruction-macros-derive/: Cargo.toml
instruction-macros/crates/instruction-macros-derive/src/: lib.rs
instruction-macros/crates/instruction-macros-derive/src/derive/: instruction_data.rs  mod.rs  pack.rs  unpack.rs
instruction-macros/crates/instruction-macros-impl/: Cargo.toml
instruction-macros/crates/instruction-macros-impl/src/: lib.rs  pack.rs  unpack.rs
instruction-macros/crates/instruction-macros-impl/src/parse/: argument_type.rs  data_enum.rs  data_struct.rs  error_type.rs  instruction_account.rs  instruction_argument.rs  instruction_discriminant.rs  instruction_variant.rs  known_type.rs  mod.rs  name_value.rs  parsed_enum.rs  parsed_packed_struct.rs  parsed_struct.rs  parsing_error.rs  primitive_arg.rs  program_id.rs  require_repr.rs  require_repr_u8.rs  validation.rs
instruction-macros/crates/instruction-macros-impl/src/render/: feature.rs  feature_namespace.rs  instruction_accounts.rs  mod.rs  (+7 more)
instruction-macros/crates/instruction-macros-traits/: Cargo.toml
instruction-macros/crates/instruction-macros-traits/src/: lib.rs  pack.rs  tagged.rs  unpack.rs
instruction-macros/crates/instruction-macros/src/: debug.rs  lib.rs
instruction-macros/crates/test-fixtures/: .gitignore  Cargo.toml  README.md
instruction-macros/crates/test-fixtures/src/: client.rs  events.rs  lib.rs  pack.rs  pack_and_unpack.rs  pinocchio.rs  program.rs  solana_program.rs
instruction-macros/crates/test-fixtures/tests/: tests.rs
instruction-macros/src/: lib.rs
instruction-macros/src/derive/: accounts.rs  instruction_data.rs  mod.rs
instruction-macros/src/parse/: config_attribute.rs  data_enum.rs  error.rs  error_path.rs  error_type.rs  instruction_account.rs  instruction_argument.rs  instruction_tags.rs  instruction_variants.rs  mod.rs  name_value.rs  parsed_enum.rs  parsing_error.rs  primitive_arg.rs  validation.rs
instruction-macros/src/parse/config/: error_type.rs  from_attribute.rs  mod.rs
instruction-macros/src/render/: account_structs.rs  instruction_data_struct.rs  mod.rs  try_from_u8_for_instruction_tag.rs
interface/: Cargo.toml
interface/src/: error.rs  events.rs  instruction.rs  instructions.rs  lib.rs  pack.rs  syscalls.rs  utils.rs
interface/src/events/: mod.rs  tests.rs
interface/src/instructions/: amount.rs  close.rs  close_seat.rs  deposit.rs  mod.rs  num_sectors.rs  orders.rs  register_market.rs  withdraw.rs
interface/src/state/: asks_dll.rs  bids_dll.rs  dropset.rs  free_stack.rs  linked_list.rs  market.rs  market_header.rs  market_seat.rs  mod.rs  node.rs  order.rs  seats_dll.rs  sector.rs  transmutable.rs  user_order_sectors.rs  user_orders.rs
interface/tests/: market.rs  pubkey.rs
price/: Cargo.toml
price/src/: client_helpers.rs  decoded_price.rs  encoded_price.rs  error.rs  lib.rs  macros.rs  validated_mantissa.rs
program/: Cargo.toml
program/src/: debug.rs  entrypoint.rs  events.rs  lib.rs
program/src/context/: cancel_order_context.rs  close_context.rs  close_seat_context.rs  deposit_withdraw_context.rs  flush_events_context.rs  market_order_context.rs  mod.rs  mutate_orders_context.rs  register_market_context.rs
program/src/instructions/: batch.rs  batch_replace.rs  cancel_order.rs  close.rs  close_seat.rs  deposit.rs  flush_events.rs  mod.rs  place_order.rs  post_order.rs  register_market.rs  withdraw.rs
program/src/instructions/market_order/: fill_market_order.rs  mod.rs  mul_div_checked.rs
program/src/shared/: account_resize.rs  market_operations.rs  mod.rs  order_operations.rs  seat_operations.rs  seeds.rs
program/src/shared/token_utils/: create_market_token_accounts.rs  create_token_accounts.rs  market_transfers.rs  mod.rs  vault_transfers.rs
program/src/validation/: dropset_program_info.rs  event_authority.rs  market_account_info.rs  market_account_view.rs  mint_info.rs  mod.rs  system_program_info.rs  token_account_info.rs  token_program_info.rs  uninitialized_account_info.rs
(+56 files in other folders)
