[workspace]
resolver = "2"
members = [
  "interface",
  "program",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
bytemuck = { version = "1.23.2", features = ["derive"] }
pinocchio = { version = "0.9.2" }
pinocchio-associated-token-account = { version = "0.2.0" }
pinocchio-pubkey = { version = "0.3.0" }
pinocchio-system = { version = "0.3.0" }
pinocchio-token = { version = "0.4.0" }
pinocchio-token-2022 = { version = "0.1.0" }
pinocchio-token-interface = { package = "pinocchio-token-interface", git = "https://github.com/solana-program/token.git", rev = "75116550519a9ee3fdfa6c819aca91e383fffa39" }
solana-sdk = "2.2.0"
solana-pubkey = { version = "2.4.0", features = ["curve25519"] }
static_assertions = "1.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = "1.47.1"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-alloc", "custom-panic", "frozen-abi", "no-entrypoint"))',
]
