[workspace]
resolver = "2"
members = [
  "interface",
  "program",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.23.2", features = ["derive"] }
itertools = "0.14.0"
pinocchio = { version = "0.9.2" }
pinocchio-associated-token-account = { version = "0.2.0" }
pinocchio-log = { version = "0.5.1" }
pinocchio-pubkey = { version = "0.3.0" }
pinocchio-system = { version = "0.3.0" }
pinocchio-token = { version = "0.4.0" }
pinocchio-token-2022 = { version = "0.1.0" }
solana-address = "1.0.0"
solana-client = "3.0.7"
solana-commitment-config = "3.0.0"
solana-cpi = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-instruction = "3.0.0"
solana-instruction-error = "2.0.0"
solana-msg = "3.0.0"
solana-sdk = "3.0.0"
solana-system-interface = "2.0.0"
solana-pubkey = { version = "3.0.0", features = ["curve25519"] }
solana-transaction-error = "3.0.0"
solana-transaction-status = "3.0.7"
solana-transaction-status-client-types = "3.0.7"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
spl-token-2022-interface = "2.0.0"
static_assertions = "1.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = "1.47.1"

[workspace.dependencies.pinocchio-token-interface]
git = "https://github.com/solana-program/token.git"
rev = "75116550519a9ee3fdfa6c819aca91e383fffa39"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("no-entrypoint"))',
    'cfg(feature, values("std"))',
]
