[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
borsh.workspace = true
colored.workspace = true
dropset = { path = "../program" }
dropset-interface = { path = "../interface", features = ["client", "solana-program"], default-features = false }
solana-client.workspace = true
solana-commitment-config.workspace = true
solana-compute-budget-interface.workspace = true
solana-cpi.workspace = true
solana-instruction.workspace = true
solana-instruction-error.workspace = true
solana-sdk.workspace = true
solana-system-interface = { workspace = true, features = ["serde"] }
solana-transaction-error.workspace = true
solana-transaction-status.workspace = true
solana-transaction-status-client-types.workspace = true
spl-associated-token-account-interface.workspace = true
spl-token-interface.workspace = true
spl-token-2022-interface.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true

[lints]
workspace = true
