[package]
name = "instruction-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools.workspace = true
quote = "1"
proc-macro2 = "1"
strum.workspace = true
strum_macros.workspace = true
syn = { version = "2", features = ["full", "extra-traits"] }

[lints]
workspace = true
