[package]
name = "price"
version.workspace = true
edition.workspace = true

[dependencies]
instruction-macros = { path = "../instruction-macros/crates/instruction-macros" }
pinocchio.workspace = true
solana-program-error.workspace = true
static_assertions.workspace = true
rust_decimal = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }

[dev-dependencies]
rust_decimal = { workspace = true }
strum.workspace = true
strum_macros.workspace = true

[lints]
workspace = true

[features]
default = []
client = ["dep:rust_decimal", "dep:strum", "dep:strum_macros"]
