[package]
name = "dropset"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck.workspace = true
dropset-interface = { path = "../interface" }
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
pinocchio-token.workspace = true
pinocchio-token-interface.workspace = true
pinocchio-token-2022.workspace = true
static_assertions.workspace = true

[lints]
workspace = true
