[package]
name = "market-maker"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
client = { path = "../../../client" }
chrono.workspace = true
dropset-interface = { path = "../../../interface" }
itertools.workspace = true
price = { path = "../../../price" }
reqwest.workspace = true
solana-address.workspace = true
solana-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
transaction-parser = { path = "../../../transaction-parser" }
